--- a/index.html
+++ b/index.html
@@ -5,22 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meme Generator</title>
     <!--CSS Styling-->
+
     <style>
         /* CSS Styling for meme generator */
+        body {
+            font-family: Calibri, sans-serif;
+            background-color: #c7f3df;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        #meme-container {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            max-width: 600px;
+        }
+
+        input[type="file"], input[type="text"], button {
+            margin: 5px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        canvas {
+            display: block;
+            margin: 20px auto;
+            max-width: 100%;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        button {
+            background-color: #007bff;
+            color: #fff;
+            cursor: pointer;
+            border: none;
+            border-radius: 5px;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
     <div id="meme-container">
         <input type="file" id="image-upload" accept="image/*">
         <input type="text" id="text-input" placeholder="Add text">
-        <button id="add=text-button">Add Text</button>
+        <button id="add-text-button">Add Text</button>
         <button id="download-button">Download Meme</button>
         <canvas id="meme-canvas"></canvas>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/4.7.0/fabric.min.js"></script>
+    <script src="https://unpkg.com/fabric@4.7.0/dist/fabric.min.js"></script>
     <script>
-        const canvas = new fabric.Canvas("meme-canvas");
+        const canvas = new fabric.Canvas("meme-canvas", {
+            width: 600,
+            height: 400,
+        });
+
         const imageUpload = document.getElementById("image-upload");
 
         imageUpload.addEventListener("change", (event) => {
@@ -39,9 +89,10 @@
         });
 
         function addText() {
-            const text = new fabric.Text("Your text here ", {
-                left: 100,
-                top: 100,
+            const textInput = document.getElementById("text-input").value;
+            const text = new fabric.Text(textInput, {
+                left: canvas.width / 2,
+                top: canvas.height / 2,
                 fontFamily: "Calibri",
                 fontSize: 24,
                 fill: "white",
@@ -60,6 +111,7 @@
             downloadLink.download = "meme.png";
             // trigger the download
             downloadLink.click();
+            createAndDownloadMeme();
         })
 
 
