--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meme Generator</title>
-    <!--CSS Styling-->
-
     <style>
-        /* CSS Styling for meme generator */
         body {
             font-family: Calibri, sans-serif;
             background-color: #c7f3df;
@@ -19,8 +16,8 @@
         }
 
         #meme-container {
-            background-color: #fff;
-            border: 1px solid #ddd;
+            background-color: #cf8b8b;
+            border: 1px solid #000000;
             padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             text-align: center;
@@ -30,7 +27,7 @@
         input[type="file"], input[type="text"], button {
             margin: 5px;
             padding: 10px;
-            border: 1px solid #ddd;
+            border: 1px solid #ffffff;
             border-radius: 5px;
         }
 
@@ -38,7 +35,7 @@
             display: block;
             margin: 20px auto;
             max-width: 100%;
-            border: 1px solid #ddd;
+            border: 1px solid #bd8585;
             border-radius: 5px;
         }
 
@@ -64,7 +61,7 @@
         <canvas id="meme-canvas"></canvas>
     </div>
 
-    <script src="https://unpkg.com/fabric@4.7.0/dist/fabric.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/2.3.6/fabric.min.js"></script>
     <script>
         const canvas = new fabric.Canvas("meme-canvas", {
             width: 600,
@@ -80,24 +77,29 @@
                 reader.onload = function (e) {
                     const img = new Image();
                     img.src = e.target.result;
-
-                    // adding image to canvas
-                    canvas.setBackgroundImage(img.src, canvas.renderAll.bind(canvas));
+                    img.onload = function () {
+                        const fabricImage = new fabric.Image(img);
+                        canvas.add(fabricImage);
+                        canvas.renderAll();
+                    }
                 };
                 reader.readAsDataURL(file);
             }
         });
 
         function addText() {
+            console.log("OK");
             const textInput = document.getElementById("text-input").value;
             const text = new fabric.Text(textInput, {
                 left: canvas.width / 2,
                 top: canvas.height / 2,
                 fontFamily: "Calibri",
                 fontSize: 24,
-                fill: "white",
+                fill: "black",
+                textAlign: 'center',
             });
             canvas.add(text);
+            canvas.renderAll();
         }
 
         const downloadButton = document.getElementById("download-button");
@@ -111,10 +113,22 @@
             downloadLink.download = "meme.png";
             // trigger the download
             downloadLink.click();
-            createAndDownloadMeme();
         })
 
-
+        canvas.on('mouse:down', function (event) {
+            if (event.target === canvas) {
+                const textInput = document.getElementById("text-input").value;
+                const text = new fabric.Text(textInput, {
+                    left: event.e.offsetX,
+                    top: event.e.offsetY,
+                    fontFamily: "Calibri",
+                    fontSize: 24,
+                    fill: "black",
+                });
+                canvas.add(text);
+                canvas.renderAll();
+            }
+        });
     </script>
 </body>
 </html>
